# Simulator-of-Optical-Quality

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
src/: base_class.py
src/optical_system/: optical_response.py  zernike_polynomial.py
src/simulator_of_optical_quality/: base_class.py  cli.py
src/simulator_of_optical_quality/optical_system/: optical_response.py  zernike_polynomial.py
tests/test_optical_system/: test_optical_response.py  test_zernike_polynomial.py
tests/test_simulator_of_optical_quality/: test_cli.py
tests/test_simulator_of_optical_quality/test_optical_system/: test_optical_response.py  test_zernike_polynomial.py
