[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "Simulator of Optical Quality"
authors = [{name = "Florian Pignol", email = "florian.pignol2@gmal.com"}]
version = "0.1"
dependencies = [
    "opencv-contrib-python",
    "numpy",
    "matplotlib",
    "click",
]

[project.optional-dependencies]
testing = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
